--- a/Main_Ex603/DllClient/DllClient.vcxproj
+++ b/Main_Ex603/DllClient/DllClient.vcxproj
@@ -138,7 +138,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <OutputFile>..\Release\Client.dll</OutputFile>
+      <OutputFile>..\..\..\Client\Client.dll</OutputFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='1.03B|Win32'">
