--- a/GameServer/GameServer/GameServer.vcxproj
+++ b/GameServer/GameServer/GameServer.vcxproj
@@ -1369,6 +1369,7 @@
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="TvTEvent.cpp" />
     <ClCompile Include="UserConfig.cpp" />
+    <ClCompile Include="VIPSystem.cpp" />
     <ClCompile Include="Voter.cpp" />
     <ClCompile Include="WinConsole.cpp" />
     <ClCompile Include="WingsDamage.cpp" />
@@ -1820,6 +1821,7 @@
     <ClInclude Include="IllusionTempleProcess.h" />
     <ClInclude Include="PCBangPointSystem.h" />
     <ClInclude Include="GambleSystem.h" />
+    <ClInclude Include="VIPSystem.h" />
     <ClInclude Include="VMProtectSDK.h" />
     <ClInclude Include="Voter.h" />
     <ClInclude Include="WinConsole.h" />
