Chaged add points command to only work for VIP players;

--- a/Launcher/Net Launcher/Launcher.csproj
+++ b/Launcher/Net Launcher/Launcher.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{AC96E254-33C7-4B88-8CA9-5842F3E4C720}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Net_Launcher</RootNamespace>
-    <AssemblyName>Net Launcher</AssemblyName>
+    <RootNamespace>Launcher</RootNamespace>
+    <AssemblyName>Launcher</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
