Fixed Box of Kundun drop; Changed VIP system to use Epoch time

--- a/Main_Ex603/DllClient/DllClient.vcxproj
+++ b/Main_Ex603/DllClient/DllClient.vcxproj
@@ -135,7 +135,7 @@
       <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <OutputFile>..\..\..\Client\Client.dll</OutputFile>
